# de

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  python-package-ci.yml
apollo/: main.py
apollo/bronze/: config.py
apollo/bronze/processors/: base_processor.py  customer_processor.py  sales_processor.py
apollo/config/: bronze_config.yaml
apollo/core/: base_processor.py  processor_factory.py
apollo/utils/: config_manager.py  logger.py  spark_session_manager.py
src/bronze/: config.py
src/bronze/processors/: base_processor.py  sales_processor.py
src/utils/: config_manager.py  spark_session_manager.py
tests/: conftest.py
tests/test_core/: test_base_processor.py  test_processor_factory.py
