[tool.poetry]
name = "apollo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
#packages = [
#    { include = { "apollo", "tests" }  }
#]

[tool.poetry.dependencies]
python = "^3.11"
pip = "==24.3.1"
pytest = "^8.3.4"
pyspark = "^3.5.4"
pyyaml = "^6.0.2"
pytest-mock = "^3.14.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
isort = "^5.13.2"
pytest-cov = "^6.0.0"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
